=========
 Changes
=========

Here you can see the list of changes between each Holocron release.


0.2.0 (unreleased)
==================

- Added reStructuredText converter.
- Added ``holocron.ext.abc.Extension`` interface.
- Added Python 3.5 support.
- Fixed Markdown title parser for documents with multiple <h1> titles..
- Fixed security issue when content author may steal private data through
  content's meta header.
- Fixed YAML header parser for documents with multiple ``---`` signs.


0.1.1 (2015-08-22)
==================

- ``tests`` package is no longer installed.
- ``holocron.theme`` data is now installed by setuptools.


0.1.0 (2015-08-22)
==================

- First public release.