@@ -1,16 +1,0 @@
-[x] Check possible issue with parsing document header, similar to
-    parsing Markdown's title.
-[ ] Commands must be either like regular extensions, or separate kind of.
-    Should be moved from holocron.ext namespace for sure.
-[ ] Holocron class must support a way to setup a new theme. Consider to
-    overwrite *user* theme option. I think it's unnecessary complexity
-    to keep a way to have base theme, user theme and extension theme.
-    So, extension should: either overwrite user theme or base theme.
-    The latest is preferable, i think. 
-[ ] Themes should support SASS.
-[ ] Posts should not be limited to year/month/day, there should be
-    a way to have posts/title format.
-[ ] Holocron should support include / exclude additional list.
-[ ] Base theme should support twitter cards.
-[ ] Base theme should support facebook open graph.
-[ ] There should be a deploy command.
