@@ -11,6 +11,7 @@ Here you can see the list of changes between each Holocron release.
 - Added reStructuredText converter.
 - Added ``holocron.ext.abc.Extension`` interface.
 - Added Python 3.5 support.
+- Added Twitter Cards support.
 - Fixed Markdown title parser for documents with multiple <h1> titles..
 - Fixed security issue when content author may steal private data through
   content's meta header.
